--- a/index.html
+++ b/index.html
@@ -27,20 +27,9 @@
           <div class="thumbs">
             <div class="prev" @click="showPrev"></div>
             <div class="next" @click="showNext"></div>
-            <div class="thumb active">
-              <img src="img/01.webp" alt="Svezia" />
-            </div>
-            <div class="thumb">
-              <img src="img/02.webp" alt="Ratchet & Clank" />
-            </div>
-            <div class="thumb">
-              <img src="img/03.webp" alt="Fortnite" />
-            </div>
-            <div class="thumb">
-              <img src="img/04.webp" alt="Stray" />
-            </div>
-            <div class="thumb">
-              <img src="img/05.webp" alt="Avengers" />
+            <div class="thumb" v-for="(element, index) in slides"
+            :class="index === activeIndex? 'active': '' ">
+              <img :src="element.image" alt="element thumb image" />
             </div>
           </div>
         </div>
