--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div id="app">
-      <div class="container">
+      <div class="container" @keyup.up="showPrev" @keyup.down="showNext" tabindex="0">
         <div
           class="slider-wrapper"
           tabindex="0"
